# json-on-the-clocktower

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NEW-CHARACTER.md  README.md  new-character.sh  package.json  pyproject.toml
.changeset/: appalling-aquamarine-dove.md  certain-amber-barnacle.md  colourful-harlequin-giraffe.md  curvy-toes-clean.md  dramatic-harlequin-jellyfish.md  dry-beige-pigeon.md  eleven-stingrays-protect.md  fifty-walls-lick.md  financial-magenta-krill.md  fresh-coins-smoke.md  funny-fuchsia-firefly.md  gold-dolls-return.md  healthy-pumpkins-walk.md  injured-moccasin-goldfish.md  lengthy-moccasin-cattle.md  light-monkeys-live.md  logical-silver-canidae.md  loud-deers-provide.md  male-harlequin-gamefowl.md  managerial-plum-buzzard.md  medieval-sapphire-ox.md  minimum-orange-eagle.md  nine-berries-pump.md  overwhelming-white-lark.md  past-gray-vole.md  red-poets-accept.md  rich-dancers-jam.md  selfish-silver-herring.md  shy-adults-drum.md  silver-kings-remember.md  smart-violet-grouse.md  smooth-indigo-basilisk.md  splendid-gold-bonobo.md  squealing-teal-ant.md  stale-rules-bake.md  sticky-silver-smelt.md  thirty-suits-reflect.md  tiny-yellow-manatee.md  two-gifts-vanish.md  universal-emerald-perch.md  (+7 more)
.github/workflows/: changelog-info.yml  changeset-release.yml  dependabot-changeset.yml  github-release.yml  labeler.yml  python-test.yml  update-doc-version.yml
data/: role-edition.json
data/extra-characters/: banshee.json  bootlegger.json  harpy.json  hatter.json  highpriestess.json  kazali.json  knight.json  (+10 more)
morph/: cli.py  util.py
(+3 files in other folders)
