[tool.poetry]
name = "json-on-the-clocktower"
version = "0.0.33"
description = "Meld JSON resources into one processed file"
authors = ["Chisel <chisel@malik-wright.uk>"]
readme = "README.md"
packages = [{include = "morph"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.4"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.3.0"
types-requests = "^2.31.0.0"
pylint = "^3.0.2"
pytest = "^8.0.0"
boto3-stubs = "^1.28.35"
boto3 = "^1.28.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
